--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -10,6 +10,7 @@
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<!--Defines the charset for the wesite-->
@@ -26,7 +27,7 @@
 	<body>
 		<nav>
 			<div class="nav-wrapper">
-			  <a href="home.html" class="brand-logo center">Logo</a>
+			  <a href="home.html" class="brand-logo center">Silent Score</a>
 			  <ul id="nav-mobile" class="left">
 				<li><a data-target="mobile-nav" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a></li>
 				<li><a class="hide-on-small-only" id="login" onclick="login()">login/sign up</a></li>
@@ -34,10 +35,14 @@
 			</div>
 		</nav>
 		
-		<ul class="sidenav center" id="mobile-nav">
-			<li><a class="hide-on-med-and-up" id="loginMobile" onclick="login()">login/sign up</a></li>
-			<li><a>Im a normal link</a></li>
-		</ul>
+		<div class="sidenav center" id="mobile-nav">
+            <i class="material-icons logo">waves</i>
+            
+            <ul>
+                <li><a class="hide-on-med-and-up" id="loginMobile" onclick="login()">login/sign up</a></li>
+                <li><a>Im a normal link</a></li>
+            </ul>
+		</div>
 		
 	</body>
 
