--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 		<!--Import materialize.css-->
 		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+
 		<!--Let browser know website is optimized for mobile-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<!--Defines the charset for the wesite-->
@@ -26,8 +27,8 @@
 
 	<body>
 		<nav>
-			<div class="nav-wrapper">
-			  <a href="home.html" class="brand-logo center">Silent Score</a>
+			<div class="nav-wrapper white">
+			  <a href="home.html" class="brand-logo center title">Silent Score</a>
 			  <ul id="nav-mobile" class="left">
 				<li><a data-target="mobile-nav" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a></li>
 				<li><a class="hide-on-small-only" id="login" onclick="login()">login/sign up</a></li>
@@ -37,15 +38,23 @@
 		
 		<div class="sidenav center" id="mobile-nav">
             <i class="material-icons logo">waves</i>
-            
             <ul>
                 <li><a class="hide-on-med-and-up" id="loginMobile" onclick="login()">login/sign up</a></li>
                 <li><a>Im a normal link</a></li>
             </ul>
 		</div>
 		
+        <div class="container center">
+            <div class="row">
+                <div class="col s12" style="margin-top:100px;background:#fff" id="boo"></div>
+            </div>
+        </div>
+
+
 	</body>
 
+    <script type="text/javascript" src="js/vexflow.js"></script>
+<script type="text/javascript" src="js/vextab.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
 	<script type="text/javascript" src="js/javascript.js"></script>
 </html>
