--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 
 	<body>
 		<nav>
-			<div class="nav-wrapper white">
+			<div class="nav-wrapper ">
 			  <a href="home.html" class="brand-logo center title">Silent Score</a>
 			  <ul id="nav-mobile" class="left">
 				<li><a data-target="mobile-nav" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a></li>
@@ -49,12 +49,11 @@
                 <div class="col s12" style="margin-top:100px;background:#fff" id="boo"></div>
             </div>
         </div>
-
+		
+		<canvas id="content" height="500px" width="800px" style="background-color:red;"></canvas>
 
 	</body>
 
-    <script type="text/javascript" src="js/vexflow.js"></script>
-<script type="text/javascript" src="js/vextab.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
 	<script type="text/javascript" src="js/javascript.js"></script>
 </html>
