--- a/home.html
+++ b/home.html
@@ -46,11 +46,10 @@
 		
         <div class="container center">
             <div class="row">
-                <div class="col s12" style="margin-top:100px;background:#fff" id="boo"></div>
+                <div class="col s12" style="margin-top:100px;background:#fff"> DO THIS WITH AN SVG INSTEAD</div>
             </div>
         </div>
 		
-		<canvas id="content" height="500px" width="800px" style="background-color:red;"></canvas>
 
 	</body>
 
