--- a/home.html
+++ b/home.html
@@ -1,33 +1,26 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<html>
 
 	<head>
 		<title>Silent Score</title>
 		
-		<!--Import Google Icon Font-->
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-		<!--Import materialize.css-->
-		<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
-
-		<!--Let browser know website is optimized for mobile-->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<!--Defines the charset for the wesite-->
-		<meta charset="utf-8"/>
 		
-		<meta name="description" content="Design, write and share music" />
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<meta charset="utf-8"/>
+		<meta name="description" content="Get informed about who reprisents you, vote on what you believe in, and make the change you want to see in the world." />
 		<meta name="authors" content="Oliver Brotchie" />
-		<meta name="keywords" content="tab,music,song,song writing,music writing,tab writing,guitar,learn guitar,bass guitar,learn bass guitar"/>
+		<meta name="keywords" content="vote,democracy,parliment,uk,politics,infomation"/>
 		<meta name="robots" content="index, follow"/>
 		
 		
 	</head>
 
 	<body>
+
 		<nav>
-			<div class="nav-wrapper ">
+			<div class="nav-wrapper">
 			  <a href="home.html" class="brand-logo center title">Silent Score</a>
 			  <ul id="nav-mobile" class="left">
 				<li><a data-target="mobile-nav" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a></li>
@@ -46,13 +39,13 @@
 		
         <div class="container center">
             <div class="row">
-                <div class="col s12" style="margin-top:100px;background:#fff"> DO THIS WITH AN SVG INSTEAD</div>
+                
+                
             </div>
         </div>
 		
 
+        <script type="text/javascript" src="js/materialize.min.js"></script>
+        <script type="text/javascript" src="js/javascript.js"></script>
 	</body>
-
-	<script type="text/javascript" src="js/materialize.min.js"></script>
-	<script type="text/javascript" src="js/javascript.js"></script>
 </html>
