--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="nav-wrapper">
 			  	<a href="home.html" class="brand-logo center title">Silent Score</a>
 			  	<ul id="nav-mobile" class="left">
-					<li><a data-target="mobile-nav" class="sidenav-trigger show-on-large"><i class="material-icons">menu</i></a></li>
+					<li><a data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a></li>
 			  	</ul>
 			</div>
 		</nav>
@@ -32,7 +32,7 @@
 			<i class="material-icons logo">how_to_vote</i>
 			<form>
 				<div class="input-field">
-					<i class="material-icons prefix">search</i>
+					<i class="material-icons prefix" onclick="search()">search</i>
 					<input id="search" type="text">
 				</div>
 			</form>
@@ -45,16 +45,9 @@
 					<li><a><i class="material-icons">settings</i>Settings</a></li>
 				</ul>
 			</div>
-
-
-
 		</div>
 		
         <div class="container center">
-            <div class="row">
-                
-                
-            </div>
         </div>
 		
 
