updates to template

--- a/index.html
+++ b/index.html
@@ -19,16 +19,9 @@
 
 	<body>
 
-		<nav class="hide-on-med-and-up">
-			<div class="nav-wrapper">
-			  	<a href="home.html" class="brand-logo center title">Silent Score</a>
-			  	<ul id="nav-mobile" class="left">
-					<li><a data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a></li>
-			  	</ul>
-			</div>
-		</nav>
+		<a data-target="sideBar" class="btn-floating btn-large waves-effect waves-light sidenav-trigger hide-on-med-and-up"><i class="material-icons">menu</i></a>
 		
-		<div class="sidenav sidenav-fixed center" id="mobile-nav">
+		<div class="sidenav sidenav-fixed center" id="sideBar">
 			<i class="material-icons logo">how_to_vote</i>
 			<form>
 				<div class="input-field">
